test/libsolidity/syntaxTests/literalSuffixes/usableAsSuffix/invalid_getter_as_suffix.sol
contract C {
    uint public g;

    uint a = 1 this.g;
}
// ----
// DeclarationError 7920: (48-54): Identifier not found or not unique.
